# protologic-tool

./: .gitignore  build.py  build_executable.sh  main.py  prototool.bat  prototool.sh  pyproject.toml  readme.md
prototool/: __init__.py  config.py  default_templates.py  default_tools.py  protohook.py  prototool.py  simulation.py  template.py  utils.py
prototool/tool/: __init__.py  executable.py  github_tool.py  system_tool.py  tool.py
templates/: __init__.py
templates/assemblyscript/: __init__.py
templates/assemblyscript/data/: asconfig.json  package-lock.json  package.json
templates/assemblyscript/data/src/: tick.ts  tsconfig.json
templates/assemblyscript/data/src/protologic/: Quaternion.ts  RadarContactInfo.ts  RadarTargetInfo.ts  Vector3.ts  actions.ts  constants.ts  queries.ts  wasi.ts
templates/blank/: __init__.py
templates/protolua/: __init__.py
